--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Adib &amp; Balqis</h1>
 							<h2>We Are Getting Married</h2>
+							<h2>Testing</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
 						</div>
