--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="col-xs-2">
 					<div id="fh5co-logo"><a href="index.html">Wedding<strong>.</strong></a></div>
 				</div>
-				<!-- <div class="col-xs-10 text-right menu-1">
+				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li> 
 						<li><a href="about.html">Story</a></li>
@@ -101,7 +101,7 @@
 						</li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
-				</div> -->
+				</div>
 			</div>
 			
 		</div>
@@ -148,7 +148,7 @@
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
 				<div class="couple-half">
 					<div class="bride">
-						<img src="images/2022_03_05_12_27_IMG_5165.jpg" alt="bride" class="img-responsive">
+						<img src="images/couple-2.jpg" alt="bride" class="img-responsive">
 					</div>
 					<div class="desc-bride">
 						<h3>Puteri Syahirah Balqis</h3>
