--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]> 	   <html class="no-js"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -284,82 +284,82 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.jpg); "> 
-						<!-- <a href="images/2022_03_05_18_47_IMG_5262.jpg">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.JPG); "> 
+						<a href="images/2022_03_05_18_47_IMG_5262.jpg">
 							<div class="case-studies-summary">
 								<span>14 Photos</span>
 								<h2>Two Glas of Juice</h2>
 							</div>
-						</a> -->
+						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.jpg); ">
-						<!-- <a href="#" class="color-2">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.JPG); ">
+						<a href="#" class="color-2">
 							<div class="case-studies-summary">
 								<span>30 Photos</span>
 								<h2>Timer starts now!</h2>
 							</div>
-						</a> -->
+						</a>
 					</li>
 
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3.jpg); ">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3.JPG); ">
 						<a href="images/3.jpg" class="color-3">
 							<div class="case-studies-summary">
 								<span>Tap to enlarge</span>
-								<!-- <h2>Tap to enlarge</h2> -->
+								
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.jpg); ">
-						<!-- <a href="#" class="color-4">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.JPG); ">
+						<a href="#" class="color-4">
 							<div class="case-studies-summary">
 								<span>12 Photos</span>
 								<h2>Company's Conference Room</h2>
 							</div>
-						</a> -->
+						</a>
 					</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.jpg); ">
-							<!-- <a href="#" class="color-3">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.JPG); ">
+							<a href="#" class="color-3">
 								<div class="case-studies-summary">
 									<span>50 Photos</span>
 									<h2>Useful baskets</h2>
 								</div>
-							</a> -->
+							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.jpg); ">
-							<!-- <a href="#" class="color-4">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.JPG); ">
+							<a href="#" class="color-4">
 								<div class="case-studies-summary">
 									<span>45 Photos</span>
 									<h2>Skater man in the road</h2>
 								</div>
-							</a> -->
+							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.jpg); ">
-							<!-- <a href="#" class="color-4">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.JPG); ">
+							<a href="#" class="color-4">
 								<div class="case-studies-summary">
 									<span>35 Photos</span>
 									<h2>Two Glas of Juice</h2>
 								</div>
-							</a> -->
+							</a>
 						</li>
 
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.jpg); "> 
-							<!-- <a href="#" class="color-5">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.JPG); "> 
+							<a href="#" class="color-5">
 								<div class="case-studies-summary">
 									<span>90 Photos</span>
 									<h2>Timer starts now!</h2>
 								</div>
-							</a> -->
+							</a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.jpg); ">
-							<!-- <a href="#" class="color-6">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.JPG); ">
+							<a href="#" class="color-6">
 								<div class="case-studies-summary">
 									<span>56 Photos</span>
 									<h2>Beautiful sunset</h2>
 								</div>
-							</a> -->
+							</a>
 						</li>
 					</ul>		
 				</div>
