--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
+	<!-- <nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-2">
@@ -105,7 +105,7 @@
 			</div>
 			
 		</div>
-	</nav>
+	</nav> -->
 
 	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/background_img.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
@@ -275,9 +275,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<span>Our Memories</span>
-					<h2>Wedding Gallery</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<span>5th March 2022</span>
+					<h2>Engagement Gallery</h2>
+					<p>A few precious memories</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -285,20 +285,20 @@
 					<ul id="fh5co-gallery-list">
 						
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.JPG); "> 
-						<a href="images/2022_03_05_18_47_IMG_5262.jpg">
+						<!-- <a href="images/2022_03_05_18_47_IMG_5262.jpg">
 							<div class="case-studies-summary">
 								<span>14 Photos</span>
-								<h2>Two Glas of Juice</h2>
+								<h2>Balqis & Adib</h2>
 							</div>
-						</a>
+						</a> -->
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.JPG); ">
-						<a href="#" class="color-2">
+						<!-- <a href="#" class="color-2">
 							<div class="case-studies-summary">
 								<span>30 Photos</span>
-								<h2>Timer starts now!</h2>
+								<h2></h2>
 							</div>
-						</a>
+						</a> -->
 					</li>
 
 
@@ -311,55 +311,55 @@
 						</a>
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.JPG); ">
-						<a href="#" class="color-4">
+						<!-- <a href="#" class="color-4">
 							<div class="case-studies-summary">
 								<span>12 Photos</span>
-								<h2>Company's Conference Room</h2>
+								<h2></h2> 
 							</div>
-						</a>
+						</a> -->
 					</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.JPG); ">
-							<a href="#" class="color-3">
+							<!-- <a href="#" class="color-3">
 								<div class="case-studies-summary">
-									<span>50 Photos</span>
+									<span>50 Photos</span> 
 									<h2>Useful baskets</h2>
 								</div>
-							</a>
+							</a> -->
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.JPG); ">
-							<a href="#" class="color-4">
+							<!-- <a href="#" class="color-4">
 								<div class="case-studies-summary">
 									<span>45 Photos</span>
 									<h2>Skater man in the road</h2>
 								</div>
-							</a>
+							</a> -->
 						</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.JPG); ">
-							<a href="#" class="color-4">
+							<!-- <a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>35 Photos</span>
+									<span>35 Photos</span> 
 									<h2>Two Glas of Juice</h2>
 								</div>
-							</a>
+							</a> -->
 						</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.JPG); "> 
-							<a href="#" class="color-5">
+							<!-- <a href="#" class="color-5">
 								<div class="case-studies-summary">
 									<span>90 Photos</span>
 									<h2>Timer starts now!</h2>
 								</div>
-							</a>
+							</a> -->
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.JPG); ">
-							<a href="#" class="color-6">
+							<!-- <a href="#" class="color-6">
 								<div class="case-studies-summary">
 									<span>56 Photos</span>
 									<h2>Beautiful sunset</h2>
 								</div>
-							</a>
+							</a> -->
 						</li>
 					</ul>		
 				</div>
