fixed one routing for image

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3.JPG); ">
-						<a href="images/3.jpg" class="color-3">
+						<a href="images/3.JPG" class="color-3">
 							<div class="case-studies-summary">
 								<span>Tap to enlarge</span>
 								
