--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
 									<h3>Wedding Party</h3>
+									<!-- <span>https://g.page/Le-Gardens-Pavilion?share</span> -->
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<!-- <span>7:00 PM</span>  -->
@@ -207,7 +208,14 @@
 										<!-- <span>November, 2016</span> -->
 										<span>TBD</span>
 									</div>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<div>
+										<i class="icon-map"></i>
+										<span>Le Gardens Pavilion</span>
+										<span>Le Gardens Pavilion, Persiaran Gamuda Gardens 1, 48050 Rawang, Selangor Persiaran Gamuda Gardens, 48050, Rawang, Selangor</span>
+										<a href="https://g.page/Le-Gardens-Pavilion?share" class="color-3">Click here for map</a>
+										<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.2697742390123!2d101.53615061475773!3d3.2831666976098064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc437909bbc2cb%3A0x9812cf660e6c7861!2sLe%20Gardens%20Pavilion!5e0!3m2!1sen!2smy!4v1647757827732!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+									</div>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
 								</div>
 							</div>
 						</div>
