--- a/index.html
+++ b/index.html
@@ -84,70 +84,76 @@
             </div>
         </header> -->
 
-        <div id="fh5co-couple-story">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <h2 style="color:#510400">Our Story</h2>
-                        <p>An unexpected meeting with a predictable ending.</p>
+        <div style="background-image:url(images/background_story2.png); opacity:60%; background-size:contain">
+            <!-- <img src="images/background_story2.png" alt="" style="opacity:0.4"> -->
+            <div id="fh5co-couple-story">
+                <!-- <div class="overlay container">Testing</div> -->
+                <div class="container overlay">
+                    <div class="row">
+                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                            <!-- <h2 style="color:#510400">Our Story</h2>
+                            <p>An unexpected meeting with a predictable ending.</p> -->
+                            <h2>           </h2>
+                            <p>              </p>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 col-md-offset-0">
-                        <ul class="timeline animate-box">
-                            <li class="animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h3 class="timeline-title">First We Meet</h3>
-                                        <span class="date">July 25th, 2016</span>
+                    <div class="row">
+                        <div class="col-md-12 col-md-offset-0">
+                            <ul class="timeline animate-box">
+                                <li class="animate-box">
+                                    <div class="timeline-badge" style="background-image:url(images/couple-1.jpg);"></div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3 class="timeline-title">First We Meet</h3>
+                                            <span class="date">July 25th, 2016</span>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p><q>Funny story. We met at MUET in Pahang. She was beautiful and has a smile worth a million sunshine.</q>
+                                                - Adib</p>
+                                            <p><q>I thought he was a stalker. Jokes aside, he kept me calm throughout MUET and it was nice to meet a stranger that can make your day!</q>
+                                                - Puteri</p>
+                                        </div>
                                     </div>
-                                    <div class="timeline-body">
-                                        <p><q>Funny story. We met at MUET in Pahang. She was beautiful and has a smile worth a million sunshine.</q>
-                                            - Adib</p>
-                                        <p><q>I thought he was a stalker. Jokes aside, he kept me calm throughout MUET and it was nice to meet a stranger that can make your day!</q>
-                                            - Puteri</p>
+                                </li>
+                                <li class="timeline-inverted animate-box">
+                                    <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3 class="timeline-title">First Date</h3>
+                                            <span class="date">December 25th, 2015</span>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p><q>Christmas day. It was the day we took pictures under the Christmas tree while being judged by passerby.</q> - Adib</p>
+                                            <p><q>Midvalley KL, as stories have unfolded virtually for almost a year, maybe a face to face 	meet up would be a nice change for the both of us. That was the best thing ever happened as we instantly clicked!</q> - Puteri</p>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-                            <li class="timeline-inverted animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h3 class="timeline-title">First Date</h3>
-                                        <span class="date">December 25th, 2015</span>
+                                </li>
+                                <li class="animate-box">
+                                    <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3 class="timeline-title">In A Relationship</h3>
+                                            <span class="date">January 1st, 2016</span>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p>So... He said "yes". She said "yes". We decided to keep saying "yes" (and sometimes no) for almost 6 years. Imperfection was imperative, mistakes were made but despite it all we listened, laughed, lived and love each other. Between those moments, we held on and cherish and accepted each other as a whole. </p>
+                                        </div>
                                     </div>
-                                    <div class="timeline-body">
-                                        <p><q>Christmas day. It was the day we took pictures under the Christmas tree while being judged by passerby.</q> - Adib</p>
-                                        <p><q>Midvalley KL, as stories have unfolded virtually for almost a year, maybe a face to face 	meet up would be a nice change for the both of us. That was the best thing ever happened as we instantly clicked!</q> - Puteri</p>
+                                </li>
+                                <li class="timeline-inverted animate-box">
+                                    <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3 class="timeline-title">Engaged</h3>
+                                            <span class="date">March 5th, 2022</span>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p><q>I can finally point out to everyone that there's a ring on my finger!  Happily engaged to the man whom I love & proceeded on getting COVID afterwards. Love works in wonderful ways!</q>- Puteri</p>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-                            <li class="animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h3 class="timeline-title">In A Relationship</h3>
-                                        <span class="date">January 1st, 2016</span>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p>So... He said "yes". She said "yes". We decided to keep saying "yes" (and sometimes no) for almost 6 years. Imperfection was imperative, mistakes were made but despite it all we listened, laughed, lived and love each other. Between those moments, we held on and cherish and accepted each other as a whole. </p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="timeline-inverted animate-box">
-                                <div class="timeline-badge" style="background-image:url(images/couple-3.jpg);"></div>
-                                <div class="timeline-panel">
-                                    <div class="timeline-heading">
-                                        <h3 class="timeline-title">Engaged</h3>
-                                        <span class="date">March 5th, 2022</span>
-                                    </div>
-                                    <div class="timeline-body">
-                                        <p><q>I can finally point out to everyone that there's a ring on my finger!  Happily engaged to the man whom I love & proceeded on getting COVID afterwards. Love works in wonderful ways!</q>- Puteri</p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
