--- a/index.html
+++ b/index.html
@@ -186,8 +186,13 @@
                                         <div>
                                             <i class="icon-map"></i>
                                             <span>Bizmilla Event Hall</span>
+                                            <!-- <p ontouchstart="myFunction(event)">Touch me!</p> -->
                                             <span>C0107-C109, Block C, Eco Galleria, 3, Jalan Eko Botani 3/2 Nusajaya, 79100 Johor Bahru, Johor</span>
-                                            <button><a href="https://goo.gl/maps/Dk1EUcTuBoXw44Ub8">Click here for map</a></button>
+                                            <!-- test button touches -->
+                                            <button><a href="https://goo.gl/maps/Dk1EUcTuBoXw44Ub8">Click here for map</a> </button>
+                                            <div ontouchstart="">
+                                                <button>press me</button>
+                                            </div>
                                             <!-- <a href="https://goo.gl/maps/Dk1EUcTuBoXw44Ub8" class="color-3">Click here for map</a> -->
                                             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.2697742390123!2d101.53615061475773!3d3.2831666976098064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc437909bbc2cb%3A0x9812cf660e6c7861!2sLe%20Gardens%20Pavilion!5e0!3m2!1sen!2smy!4v1647757827732!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
                                         </div>
@@ -228,7 +233,10 @@
                                     <div class="display-t">
                                         <div class="animate-box">
                                             <div id="rsvp_page">
-                                                <button class="btn btn-success" onclick=" window.open('https://forms.gle/nc1XgjXydYGobFJDA','_blank')">RSVP</button>
+                                                <button class="btn btn-success" >RSVP</button>
+                                            </div>
+                                            <div class="col-md-4 col-sm-4">
+                                                <button type="submit" class="btn btn-default btn-block">I am Attending</button>
                                             </div>
                                         </div>
                                     </div>
@@ -242,46 +250,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container">
-            <h1>TEST location</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.5555376326924!2d103.61489501527956!3d1.4415736616741464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0bde45f264f7%3A0x2a45d022bfa20d77!2sBizmilla%20Event%20Hall%20%40%20Iskandar%20Puteri!5e0!3m2!1sen!2smy!4v1661764058850!5m2!1sen!2smy" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div> -->
-
-        <!-- <div id="fh5co-gallery" class="fh5co-section-gray">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                        <span style="color:#510400">5th March 2022</span>
-                        <h2 style="color:#510400">Engagement Gallery</h2>
-                        <p>A few precious memories</p>
-                    </div>
-                </div>
-                <div class="row row-bottom-padded-md">
-                    <div class="col-md-12">
-                        <ul id="fh5co-gallery-list">
-                            
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/1.JPG); "> </li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/2.JPG); "></li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/3.JPG); ">
-                                <a href="images/3.JPG" class="color-3">
-                                    <div class="case-studies-summary">
-                                        <span>Tap to enlarge</span>
-                                        
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/4.JPG); "></li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/5.JPG); "></li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/6.JPG); "></li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/7.JPG); "></li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/8.JPG); "> </li>
-                            <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/9.JPG); "></li>
-
-                        </ul>		
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         <div class="fh5co-section-gray">
             <div class="container">
@@ -568,6 +536,12 @@
                 pause: "false"
                 });
  
+        </script>
+
+        <script>
+            myFunction({
+                console.log("touched")
+            });
         </script>
     </body>
 
