updated pictures on story

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	<link href="http://fonts.cdnfonts.com/css/brown-sugar-2" rel="stylesheet">
+	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Bodoni+Moda">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -68,7 +69,9 @@
 
 	</head>
 	<body>
-		
+		<style>
+			@import url('http://fonts.cdnfonts.com/css/brown-sugar-2');
+		</style>
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
@@ -164,7 +167,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/couple-2.jpg);"></div>
+                            <div class="timeline-badge" style="background-image:url(images/story2.jpg);"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3 class="timeline-title">First Date</h3>
@@ -177,7 +180,7 @@
                             </div>
                         </li>
                         <li class="animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/story3.png);"></div>
+                            <div class="timeline-badge" style="background-image:url(images/story3.jpg);"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3 class="timeline-title">In A Relationship</h3>
@@ -189,7 +192,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/story4.jpg);"></div>
+                            <div class="timeline-badge" style="background-image:url(images/story4_engage.jpg);"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3 class="timeline-title">Engaged</h3>
@@ -745,7 +748,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2 style="font-family:brown-sugar-2;font-size:450%">Are you attending?</h2>
+					<h2 style="font-family:Bodoni Moda;font-size:50px">Are you attending?</h2>
 					<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
 				</div>
 			</div>
@@ -768,8 +771,8 @@
 							<button type="submit" class="btn btn-default btn-block"><a href="https://forms.gle/nc1XgjXydYGobFJDA"></a>I am Attending</button>
 						</div>
 					</form> -->
-					<a class="btn btn-default btn-block" style="background-color:#FFFFE0; color:black" href="https://forms.gle/nc1XgjXydYGobFJDA"><strong style="font-family:satista; font-size-adjust:auto">RSVP</strong></a>
-					<a class="btn btn-default btn-block" style="background-color:#5B865C; color: black" href="https://goo.gl/maps/Dk1EUcTuBoXw44Ub8"><strong style="font-family:satista; font-size-adjust:auto">Click here for map</strong></a>
+					<a class="btn btn-default btn-block" style="background-color:#FFFFE0; color:black" href="https://forms.gle/nc1XgjXydYGobFJDA"><strong style="font-family:satista; font-size:25px">RSVP</strong></a>
+					<a class="btn btn-default btn-block" style="background-color:#5B865C; color: black" href="https://goo.gl/maps/Dk1EUcTuBoXw44Ub8"><strong style="font-family:satista; font-size:25px">Click here for map</strong></a>
 					<!-- <button class="btn btn-default btn-block" href="https://forms.gle/nc1XgjXydYGobFJDA">RSVP</button> -->
 				</div>
 			</div>
