updated pictures and formats

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
 		</div>
 	</nav>
 
-	<div id="fh5co-event" class="fh5co-bg" style="background-color:#1E2718">	
-		<img src="images/header_img.png" style="border: none; width:100%;" data-animate-effect="fadeIn">
+	<div id="fh5co-couple-story" class="fh5co-bg" style="background-color:#1E2718" data-animate-effect="fadeIn">	
+		<img src="images/header_img.png" style="border: none; width:100%;">
 	</div>
 
 
@@ -185,7 +185,8 @@
                                     <span class="date">March 5th, 2022</span>
                                 </div>
                                 <div class="timeline-body">
-                                    <p><q>I can finally point out to everyone that there's a ring on my finger!  Happily engaged to the man whom I love & proceeded on getting COVID afterwards. Love works in wonderful ways!</q>- Puteri</p>
+									<p><q>One step closer! I honestly thought I would not have gotten this far.</q> - Adib</p>
+                                    <p><q>I can finally point out to everyone that there's a ring on my finger!  Happily engaged to the man whom I love & proceeded on getting COVID afterwards.</q> - Puteri</p>
                                 </div>
                             </div>
                         </li>
@@ -208,6 +209,24 @@
 				<div class="display-t">
 					<div class="display-tc">
 						<div class="col-md-10 col-md-offset-1">
+							<div class="text-center">
+								<div class="event-wrap animate-box">
+									<h3>Sanding Ceremony</h3>
+									<div class="event-col">
+										<i class="icon-clock"></i>
+										<span>11.30 pm</span>
+									</div>
+									<div class="event-col">
+										<i class="icon-calendar"></i>
+										<span>10/12/2022 (Saturday)</span>
+									</div>
+									<div>
+										<i class="icon-map"></i>
+										<span>Bizmilla Event Hall</span>
+										<span>C0107-C109, Block C, Eco Galleria, 3, Jalan Eko Botani 3/2 Nusajaya, 79100 Johor Bahru, Johor</span>
+									</div>
+								</div>
+							</div>
 							<!-- <div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
 									<h3>Nikah Ceremony</h3>
@@ -232,7 +251,7 @@
                                     </div>
 								</div>
 							</div> -->
-							<div class="col-md-6 col-sm-6 text-center">
+							<!-- <div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
 									<h3>Sanding Ceremony</h3>
 									<div class="event-col">
@@ -249,7 +268,7 @@
                                         <span>C0107-C109, Block C, Eco Galleria, 3, Jalan Eko Botani 3/2 Nusajaya, 79100 Johor Bahru, Johor</span>
                                     </div>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -282,7 +301,7 @@
 	                        </div>
 	                  </div>
 	                  <div class="image-container"> 
-	                    <img src="images/1.JPG" alt="" class="image" />
+	                    <img src="images/story/1.JPG" alt="" class="image" />
 	                  </div>
 	                </div>
 	                <div class="slide">
@@ -298,7 +317,7 @@
 	                    </div>
 	                  </div>
 	                  <div class="image-container">
-	                    <img src="images/2.JPG" alt="" class="image" />
+	                    <img src="images/story/2.JPG" alt="" class="image" />
 	                  </div>
 	                </div>
 	                <div class="slide">
@@ -314,7 +333,7 @@
 	                    </div>
 	                  </div>
 	                  <div class="image-container">
-	                    <img src="images/3.JPG" alt="" class="image" />
+	                    <img src="images/story/3.JPG" alt="" class="image" />
 	                  </div>
 	                </div>
 	                <div class="slide">
@@ -330,7 +349,7 @@
 	                    </div>
 	                  </div>
 	                  <div class="image-container"> 
-	                    <img src="images/4.JPG" alt="" class="image" />
+	                    <img src="images/story/4.JPG" alt="" class="image" />
 	                  </div>
 	                </div>
 	                <div class="slide">
@@ -346,9 +365,25 @@
 	                        </div>
 	                    </div>
 	                    <div class="image-container">
-	                        <img src="images/5.JPG" alt="" class="image" />
+	                        <img src="images/story/5.JPG" alt="" class="image" />
 	                    </div>
 	                </div>
+					<div class="slide">
+						<div class="slide-content">
+							<div class="caption">
+							<div class="title"></div>
+							<div class="text">
+								<!-- <p>Slide description 4</p> -->
+							</div> 
+							<!-- <a href="#" class="btn">
+								<span class="btn-inner">Learn More</span>
+							</a> -->
+							</div>
+						</div>
+						<div class="image-container"> 
+							<img src="images/story/6.JPG" alt="" class="image" />
+						</div>
+					</div>
 	                <div class="slide">
 	                    <div class="slide-content">
 	                        <div class="caption">
@@ -362,7 +397,7 @@
 	                        </div>
 	                    </div>
 	                    <div class="image-container">
-	                        <img src="images/7.JPG" style="border: none; height: 100%;" alt="" class="image" />
+	                        <img src="images/story/7.JPG" style="border: none; height: 100%;" alt="" class="image" />
 	                    </div>
 	                </div>
 	                <div class="slide">
@@ -377,10 +412,42 @@
 	                        </a> -->
 	                        </div>
 	                    </div>
-	                <div class="image-container">
-	                    <img src="images/8.JPG" alt="" class="image" />
+						<div class="image-container">
+							<img src="images/story/8.JPG" alt="" class="image" />
+						</div>
 	                </div>
-	                </div>
+					<div class="slide">
+						<div class="slide-content">
+							<div class="caption">
+							<div class="title"></div>
+							<div class="text">
+								<!-- <p>Slide description 4</p> -->
+							</div> 
+							<!-- <a href="#" class="btn">
+								<span class="btn-inner">Learn More</span>
+							</a> -->
+							</div>
+						</div>
+						<div class="image-container"> 
+							<img src="images/story/9.JPG" alt="" class="image" />
+						</div>
+					</div>
+					<div class="slide">
+						<div class="slide-content">
+							<div class="caption">
+							<div class="title"></div>
+							<div class="text">
+								<!-- <p>Slide description 4</p> -->
+							</div> 
+							<!-- <a href="#" class="btn">
+								<span class="btn-inner">Learn More</span>
+							</a> -->
+							</div>
+						</div>
+						<div class="image-container"> 
+							<img src="images/story/10.JPG" alt="" class="image" />
+						</div>
+					</div>
 	              </div>
 	              <div class="pagination">
 	                <div class="item is-active"> 
@@ -403,6 +470,15 @@
 	                </div>
 	                <div class="item">
 	                    <span class="icon">7</span>
+	                </div>
+					<div class="item">
+	                    <span class="icon">8</span>
+	                </div>
+					<div class="item">
+	                    <span class="icon">9</span>
+	                </div>
+					<div class="item">
+	                    <span class="icon">10</span>
 	                </div>
 	              </div>
 	              <div class="arrows">
