--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 	                    </div>
 	                  </div>
 	                  <div class="image-container"> 
-	                    <img src="images/story/4.JPG" alt="" class="image" />
+	                    <img src="images/story/4.1.jpg" alt="" class="image" />
 	                  </div>
 	                </div>
 	                <div class="slide">
@@ -445,7 +445,7 @@
 							</div>
 						</div>
 						<div class="image-container"> 
-							<img src="images/story/10.JPG" alt="" class="image" />
+							<img src="images/story/11.JPG" alt="" class="image" />
 						</div>
 					</div>
 	              </div>
@@ -497,7 +497,7 @@
 	              </div>
 	            </div> 
 	            <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-	            <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script> -->
+	            <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
 	            <script src="js/script.js"></script>
 	        </section>
 	    </div>
