minor fix + add registry button

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 									<h3>Sanding Ceremony</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>11.30 pm</span>
+										<span>11.30 am - 4.00 pm</span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
@@ -492,13 +492,14 @@
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 						<!-- <h2 style="font-family:Bodoni Moda;font-size:50px">Are you attending?</h2> -->
 						<h2>Are You Attending?</h2>
-						<p>Please Fill-up the form to notify you that you're attending. Thanks.</p>
+						<p>Please click on <strong><i>RSVP</i></strong> to fill up the form to notify us that you are attending! Thanks.</p>
 					</div>
 				</div>
 				<div class="row animate-box">
 					<div class="col-md-10 col-md-offset-1">
 						<a class="btn btn-default btn-block" style="background-color:#FFFFE0; color:black" href="https://forms.gle/nc1XgjXydYGobFJDA"><strong style="font-family:satista; font-size:25px">RSVP</strong></a>
 						<a class="btn btn-default btn-block" style="background-color:#5B865C; color: black" href="https://goo.gl/maps/Dk1EUcTuBoXw44Ub8"><strong style="font-family:satista; font-size:25px">Click here for map</strong></a>
+						<a class="btn btn-default btn-block" style="background-color:#FFFFE0; color:black" href="https://www.amazon.com/wedding/adib-ismail-puteri-rusli--december-2022/registry/192FB50BIBUV5"><strong style="font-family:satista; font-size:25px">Wedding Registry</strong></a>
 					</div>
 				</div>
 			</div>
