updated few images

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	</div>
 
 
-	<div id="fh5co-couple-story" style="background-image:url(images/white_background.png); background-size:contain">
+	<div id="fh5co-couple-story" style="background-image:url(images/white_background_2.png); background-size:contain">
         <div class="container overlay">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -301,7 +301,7 @@
 	                        </div>
 	                  </div>
 	                  <div class="image-container"> 
-	                    <img src="images/story/1.JPG" alt="" class="image" />
+	                    <img src="images/story/1.1.JPG" alt="" class="image" />
 	                  </div>
 	                </div>
 	                <div class="slide">
@@ -317,9 +317,25 @@
 	                    </div>
 	                  </div>
 	                  <div class="image-container">
-	                    <img src="images/story/2.JPG" alt="" class="image" />
+	                    <img src="images/story/2.2.JPG" alt="" class="image" />
 	                  </div>
 	                </div>
+					<div class="slide">
+						<div class="slide-content">
+							<div class="caption">
+							<div class="title"></div>
+							<div class="text">
+								<!-- <p>Slide description 4</p> -->
+							</div> 
+							<!-- <a href="#" class="btn">
+								<span class="btn-inner">Learn More</span>
+							</a> -->
+							</div>
+						</div>
+						<div class="image-container"> 
+							<img src="images/story/2.3.JPG" alt="" class="image" />
+						</div>
+					</div>
 	                <div class="slide">
 	                  <div class="slide-content">
 	                    <div class="caption">
@@ -460,6 +476,9 @@
 	                </div>
 					<div class="item">
 	                    <span class="icon">9</span>
+	                </div>
+					<div class="item">
+	                    <span class="icon">10</span>
 	                </div>
 	              </div>
 	              <div class="arrows">
