--- a/index.html
+++ b/index.html
@@ -84,29 +84,9 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="#">Our Story</a></li>
-						<li><a href="#">Gallery</a></li>
-						<li><a href="#">RSVP</a></li>
-						<!-- <li><a href="about.html">Story</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown">
-							<a href="gallery.html">Gallery</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li> -->
+						<li><a href="#fh5co-couple-story">Our Story</a></li>
+						<li><a href="#fh5co-gallery">Gallery</a></li>
+						<li><a href="#fh5co-footer">RSVP</a></li>
 					</ul>
 				</div>
 			</div>
@@ -114,87 +94,87 @@
 		</div>
 	</nav>
 
-	<div id="fh5co-couple-story" class="fh5co-bg" style="background-color:#1E2718" data-animate-effect="fadeIn">	
+	<div id="one" class="fh5co-bg" style="background-color:#1E2718" data-animate-effect="fadeIn">	
 		<img src="images/header_img.png" style="border: none; width:100%;">
 	</div>
 
 
 	<div id="fh5co-couple-story" style="background-image:url(images/white_background_2.png); background-size:contain">
-        <div class="container overlay">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                	<style>
-                            @import url('http://fonts.cdnfonts.com/css/brown-sugar-2');
+		<div class="container overlay">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+					<style>
+							@import url('http://fonts.cdnfonts.com/css/brown-sugar-2');
 					</style>
-                
-                    <!-- <h2 style="color:#1E2718;font-family:brown-sugar-2;font-size:500%">OUR STORY</h2> -->
+				
+					<!-- <h2 style="color:#1E2718;font-family:brown-sugar-2;font-size:500%">OUR STORY</h2> -->
 					<h2 style="color:#1E2718;">Our Story</h2>
-                    <p>An unexpected meeting with a predictable ending.</p>
-                    <h2>           </h2>
-                    <p>              </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 col-md-offset-0">
-                    <ul class="timeline animate-box">
-                        <li class="animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/story1.jpg);"></div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h3 class="timeline-title">First We Meet</h3>
-                                    <span class="date">July 25th, 2016</span>
-                                </div>
-                                <div class="timeline-body">
-                                    <p><q>Funny story. We met at MUET in Pahang. She was beautiful and has a smile worth a million sunshine.</q>
-                                        - Adib</p>
-                                    <p><q>I thought he was a stalker. Jokes aside, he kept me calm throughout MUET and it was nice to meet a stranger that can make your day!</q>
-                                        - Puteri</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/story2.jpg);"></div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h3 class="timeline-title">First Date</h3>
-                                    <span class="date">December 25th, 2015</span>
-                                </div>
-                                <div class="timeline-body">
-                                    <p><q>Christmas day. It was the day we took pictures under the Christmas tree while being judged by passerby.</q> - Adib</p>
-                                    <p><q>Midvalley KL, as stories have unfolded virtually for almost a year, maybe a face to face 	meet up would be a nice change for the both of us. That was the best thing ever happened as we instantly clicked!</q> - Puteri</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/story3.jpg);"></div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h3 class="timeline-title">In A Relationship</h3>
-                                    <span class="date">January 1st, 2016</span>
-                                </div>
-                                <div class="timeline-body">
-                                    <p>So... He said "yes". She said "yes". We decided to keep saying "yes" (and sometimes no) for almost 6 years. Imperfection was imperative, mistakes were made but despite it all we listened, laughed, lived and love each other. Between those moments, we held on and cherish and accepted each other as a whole. </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted animate-box">
-                            <div class="timeline-badge" style="background-image:url(images/story4_engage.jpg);"></div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h3 class="timeline-title">Engaged</h3>
-                                    <span class="date">March 5th, 2022</span>
-                                </div>
-                                <div class="timeline-body">
+					<p>An unexpected meeting with a predictable ending.</p>
+					<h2>           </h2>
+					<p>              </p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0">
+					<ul class="timeline animate-box">
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/story1.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">First We Meet</h3>
+									<span class="date">July 25th, 2016</span>
+								</div>
+								<div class="timeline-body">
+									<p><q>Funny story. We met at MUET in Pahang. She was beautiful and has a smile worth a million sunshine.</q>
+										- Adib</p>
+									<p><q>I thought he was a stalker. Jokes aside, he kept me calm throughout MUET and it was nice to meet a stranger that can make your day!</q>
+										- Puteri</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/story2.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">First Date</h3>
+									<span class="date">December 25th, 2015</span>
+								</div>
+								<div class="timeline-body">
+									<p><q>Christmas day. It was the day we took pictures under the Christmas tree while being judged by passerby.</q> - Adib</p>
+									<p><q>Midvalley KL, as stories have unfolded virtually for almost a year, maybe a face to face 	meet up would be a nice change for the both of us. That was the best thing ever happened as we instantly clicked!</q> - Puteri</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/story3.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">In A Relationship</h3>
+									<span class="date">January 1st, 2016</span>
+								</div>
+								<div class="timeline-body">
+									<p>So... He said "yes". She said "yes". We decided to keep saying "yes" (and sometimes no) for almost 6 years. Imperfection was imperative, mistakes were made but despite it all we listened, laughed, lived and love each other. Between those moments, we held on and cherish and accepted each other as a whole. </p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge" style="background-image:url(images/story4_engage.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Engaged</h3>
+									<span class="date">March 5th, 2022</span>
+								</div>
+								<div class="timeline-body">
 									<p><q>One step closer! I honestly thought I would not have gotten this far.</q> - Adib</p>
-                                    <p><q>I can finally point out to everyone that there's a ring on my finger!  Happily engaged to the man whom I love & proceeded on getting COVID afterwards.</q> - Puteri</p>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+									<p><q>I can finally point out to everyone that there's a ring on my finger!  Happily engaged to the man whom I love & proceeded on getting COVID afterwards.</q> - Puteri</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/green_background.png);background-size:fill">	
 		<div class="overlay"></div>
