--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- <title>Adib & Balqis Wedding &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title> -->
-	<title>Adib & Balqis Wedding</title>
+	<title>Adib & Puteri Wedding</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Puteri & Adib Wedding" />
 	<meta name="keywords" content="wedding, rsvp, registry, celebration" />
@@ -94,18 +94,18 @@
 
 			<div id="one">
 				<div class="fh5co-bg" style="background-color:#1E2718" data-animate-effect="fadeIn">	
-					<img src="images/header_img.png" style="border: none; width:100%;">
+					<img src="images/rawang/adib_puteri_rawang.png" style="border: none; width:100%;">
 				</div>
 			</div>
 
 
 			<div id="two">
-				<div id="fh5co-couple-story" style="background-image:url(images/white_background_2.png); background-size:contain">
+				<div id="fh5co-couple-story" style="background-image:url(images/rawang/background1.png); background-size:contain">
 					<div class="container overlay">
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 								<!-- <h2 style="color:#1E2718;font-family:brown-sugar-2;font-size:500%">OUR STORY</h2> -->
-								<h2 style="color:#1E2718;">Our Story</h2>
+								<h2 style="color:#80655e;">Our Story</h2>
 								<p>An unexpected meeting with a predictable ending.</p>
 								<h2>           </h2>
 								<p>              </p>
@@ -167,6 +167,18 @@
 											</div>
 										</div>
 									</li>
+									<li class="animate-box">
+										<div class="timeline-badge" style="background-image:url(images/rawang/story5.jpg);"></div>
+										<div class="timeline-panel">
+											<div class="timeline-heading">
+												<h3 class="timeline-title">Married</h3>
+												<span class="date">December 10th, 2022</span>
+											</div>
+											<div class="timeline-body">
+												<p>We're officially ex-boyfriend and ex-girlfriend.</p>
+											</div>
+										</div>
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -175,7 +187,7 @@
 			</div>
 
 			<div id="three">
-				<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/green_background.png);background-size:fill">	
+				<div id="fh5co-event" class="fh5co-bg" style="background-image:url(images/rawang/background2.png);background-size:fill">	
 					<div class="overlay"></div>
 					<div class="container">
 						<div class="row">
@@ -190,19 +202,19 @@
 									<div class="col-md-10 col-md-offset-1">
 										<div class="text-center">
 											<div class="event-wrap animate-box">
-												<h3>Sanding Ceremony</h3>
+												<h3>Majlis Persandingan</h3>
 												<div class="event-col">
 													<i class="icon-clock"></i>
-													<span>11.30 am - 4.00 pm</span>
+													<span>11.00 am - 4.00 pm</span>
 												</div>
 												<div class="event-col">
 													<i class="icon-calendar"></i>
-													<span>10/12/2022 (Saturday)</span>
+													<span>28/01/2023 (Sabtu)</span>
 												</div>
 												<div>
 													<i class="icon-map"></i>
-													<span>Bizmilla Event Hall</span>
-													<span>C0107-C109, Block C, Eco Galleria, 3, Jalan Eko Botani 3/2 Nusajaya, 79100 Johor Bahru, Johor</span>
+													<span>Bizmilla @ GAMUDA GARDENS</span>
+													<span>Persiaran Gamuda Gardens Gamuda Gardens, 48050 Rawang, Selangor</span>
 												</div>
 												<div class="simply-countdown simply-countdown-one"></div>
 											</div>
@@ -257,12 +269,12 @@
 				</div>
 			</div>
 
-			<div id="fh5co-gallery" class="fh5co-section-gray" style="background-image:url(images/white_background.png);background-size:contain">
+			<div id="fh5co-gallery" class="fh5co-section-gray" style="background-image:url(images/rawang/background1.png);background-size:fill">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-							<span style="color:#1E2718">5th March 2022</span>
-							<h2 style="color:#1E2718">Engagement Gallery</h2>
+							<span style="color:#80655e">5th March 2022</span>
+							<h2 style="color:#80655e">Engagement Gallery</h2>
 							<p>A few precious memories</p>
 						</div>
 					</div>
@@ -282,7 +294,7 @@
 									</div>
 							</div>
 							<div class="image-container"> 
-								<img src="images/story/1.1.JPG" alt="" class="image"/>
+								<img src="images/rawang/1.jpg" alt="" class="image" style="border: none; width:100%; object-fit: cover;"/>
 							</div>
 							</div>
 							<div class="slide">
@@ -298,7 +310,7 @@
 								</div>
 							</div>
 							<div class="image-container">
-								<img src="images/story/2.2.JPG" alt="" class="image" />
+								<img src="images/rawang/2.jpg" alt="" class="image" style="object-fit: contain;"/>
 							</div>
 							</div>
 							<div class="slide">
@@ -314,7 +326,7 @@
 									</div>
 								</div>
 								<div class="image-container"> 
-									<img src="images/story/2.3.JPG" alt="" class="image" />
+									<img src="images/rawang/3.jpg" alt="" class="image" style="border: none; width:100%; object-fit: contain;"/>
 								</div>
 							</div>
 							<div class="slide">
@@ -330,7 +342,7 @@
 								</div>
 							</div>
 							<div class="image-container">
-								<img src="images/story/3.JPG" alt="" class="image" />
+								<img src="images/rawang/4.jpg" alt="" class="image" style="border: none; width:100%; object-fit: cover;"/>
 							</div>
 							</div>
 							<div class="slide">
@@ -346,20 +358,20 @@
 								</div>
 							</div>
 							<div class="image-container"> 
-								<img src="images/story/4.1.jpg" alt="" class="image" />
+								<img src="images/rawang/5.jpg" alt="" class="image" style="border: none; width:100%; object-fit: cover;"/>
 							</div>
 							</div>
-							<div class="slide">
+							<!-- <div class="slide">
 								<div class="slide-content">
 									<div class="caption">
 									<div class="title"></div>
-									<div class="text">
+									<div class="text"> -->
 										<!-- <p>Slide description 3</p> -->
-									</div> 
+									<!-- </div>  -->
 									<!-- <a href="#" class="btn">
 										<span class="btn-inner">Learn More</span>
 									</a> -->
-									</div>
+									<!-- </div>
 								</div>
 								<div class="image-container">
 									<img src="images/story/5.JPG" alt="" class="image" />
@@ -369,13 +381,13 @@
 								<div class="slide-content">
 									<div class="caption">
 									<div class="title"></div>
-									<div class="text">
+									<div class="text"> -->
 										<!-- <p>Slide description 4</p> -->
-									</div> 
+									<!-- </div>  -->
 									<!-- <a href="#" class="btn">
 										<span class="btn-inner">Learn More</span>
 									</a> -->
-									</div>
+									<!-- </div>
 								</div>
 								<div class="image-container"> 
 									<img src="images/story/6.JPG" alt="" class="image" />
@@ -385,13 +397,13 @@
 								<div class="slide-content">
 									<div class="caption">
 										<div class="title"></div>
-										<div class="text">
+										<div class="text"> -->
 											<!-- <p>Slide description 3</p> -->
-										</div> 
+										<!-- </div>  -->
 										<!-- <a href="#" class="btn">
 											<span class="btn-inner">Learn More</span>
 										</a> -->
-									</div>
+									<!-- </div>
 								</div>
 								<div class="image-container">
 									<img src="images/story/7.JPG" style="border: none; height: 100%;" alt="" class="image" />
@@ -401,34 +413,34 @@
 								<div class="slide-content">
 									<div class="caption">
 									<div class="title"></div>
-									<div class="text">
+									<div class="text"> -->
 										<!-- <p>Slide description 3</p> -->
-									</div> 
+									<!-- </div>  -->
 									<!-- <a href="#" class="btn">
 										<span class="btn-inner">Learn More</span>
 									</a> -->
-									</div>
+									<!-- </div>
 								</div>
 								<div class="image-container">
 									<img src="images/story/8.JPG" alt="" class="image" />
 								</div>
-							</div>
-							<div class="slide">
+							</div> -->
+							<!-- <div class="slide">
 								<div class="slide-content">
 									<div class="caption">
 									<div class="title"></div>
-									<div class="text">
+									<div class="text"> -->
 										<!-- <p>Slide description 4</p> -->
-									</div> 
+									<!-- </div>  -->
 									<!-- <a href="#" class="btn">
 										<span class="btn-inner">Learn More</span>
 									</a> -->
-									</div>
-								</div>
+									<!-- </div> -->
+								<!-- </div>
 								<div class="image-container"> 
 									<img src="images/story/9.JPG" alt="" class="image" />
 								</div>
-							</div>
+							</div> -->
 						</div>
 						<div class="pagination">
 							<div class="item is-active"> 
@@ -446,7 +458,7 @@
 							<div class="item">
 								<span class="icon">5</span>
 							</div>
-							<div class="item">
+							<!-- <div class="item">
 								<span class="icon">6</span>
 							</div>
 							<div class="item">
@@ -460,7 +472,7 @@
 							</div>
 							<div class="item">
 								<span class="icon">10</span>
-							</div>
+							</div> -->
 						</div>
 						<div class="arrows">
 							<div class="arrow prev">
@@ -485,7 +497,7 @@
 			</div>
 
 			<footer id="fh5co-footer" role="contentinfo">
-				<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/green_background.png);background-size:fill">
+				<div id="fh5co-started" class="fh5co-bg" style="background-image:url(images/rawang/background2.png);background-size:fill">
 					<div class="overlay"></div>
 					<div class="container">
 						<div class="row animate-box">
@@ -497,9 +509,8 @@
 						</div>
 						<div class="row animate-box">
 							<div class="col-md-10 col-md-offset-1">
-								<a class="btn btn-default btn-block" style="background-color:#FFFFE0; color:black" href="https://forms.gle/nc1XgjXydYGobFJDA"><strong style="font-family:satista; font-size:20px">RSVP</strong></a>
-								<a class="btn btn-default btn-block" style="background-color:#5B865C; color: black" href="https://goo.gl/maps/Dk1EUcTuBoXw44Ub8"><strong style="font-family:satista; font-size:20px">Click here for map</strong></a>
-								<a class="btn btn-default btn-block" style="background-color:#FFFFE0; color:black" href="https://www.amazon.com/wedding/adib-ismail-puteri-rusli--december-2022/registry/192FB50BIBUV5"><strong style="font-family:satista; font-size:20px">Wedding Registry</strong></a>
+								<a class="btn btn-default btn-block" style="background-color:#FFFFE0; color:black" href="https://forms.gle/vNDYRNJ6bgGCRXow5"><strong style="font-family:satista; font-size:20px">RSVP</strong></a>
+								<a class="btn btn-default btn-block" style="background-color:#DDA3B6; color: black" href="https://goo.gl/maps/5uHodFqufrMb4ZUd9"><strong style="font-family:satista; font-size:20px">Click here for map</strong></a>
 							</div>
 						</div>
 					</div>
@@ -538,7 +549,7 @@
 
 		<script>
 			// var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000);
-			var d = new Date("Dec 10, 2022 11:30:00");
+			var d = new Date("Jan 29, 2023 11:00:00");
 
 			// default example
 			simplyCountdown('.simply-countdown-one', {
